# multiChannel_Kmeans_c

./: CMakeLists.txt  README.md  README.md~  TESTS.odt  VLargeDictionary.xml  attempts.sh  dictCreation.cpp  dictCreation.h  dictCreation.h~  dictionary.xml  filterbank.cpp  filterbank.h  imgCollection.cpp  imgCollection.h  imgFunctions.cpp  imgFunctions.h  imgFunctions.h~  modelBuild.cpp  modelBuild.h  models.xml  multiDimen.cpp  novelImgTest.cpp  novelImgTest.h  novelImgTest.h~  runProgram.sh  runProgram.sh.save  runProgram.sh.save.1  runProgram.sh~  singleImgEval.cpp  singleImgEval.h  singleImgEval.h~
Dictionaries/: dictIndex.txt  dictIndex.txt~  dictionary.xml  dictionary_1.xml  models.xml
SCRIPTS/: 3_Scale.sh  3_Scale.sh~  4_Attempts.sh  4_Attempts.sh~  5_Cropping.sh  5_Cropping.sh~  6_TrainingRepeat.sh  7_ModelRepeat.sh  8_texDict.sh  91_checkModTexDict.sh  91_checkModTexDict.sh~  9_Testing.sh  9_Testing.sh~  CMakeCache.txt  Makefile  cmake_install.cmake  multiDimen  myscript.sh
SegPositionTest/: SegTestImage.xcf
TESTINGCMAKE/: 9_Testing.sh  CMakeLists.txt
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  dictionary.xml  models.xml  multiDimen  results.xml
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  dictionary.xml  models.xml  multiDimen  results.xml
build3/: CMakeCache.txt  Makefile  cmake_install.cmake  dictionary.xml  models.xml  multiDimen  results.xml
buildTRAINING/: CMakeCache.txt  Makefile  cmake_install.cmake  dictionary.xml  models.xml  multiDimen
models/: modelIndex.txt~  models.xml  models_1.xml
results/: results.xml
(+1 files in other folders)
